@@ -815,7 +815,6 @@
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="history">-1</property>
-			  <signal name="changed" handler="prefs_path_option_changed" last_modification_time="Fri, 25 Apr 2003 09:42:18 GMT"/>
 
 			  <child>
 			    <widget class="GtkMenu" id="menu1">
@@ -887,7 +886,6 @@
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="history">-1</property>
-			  <signal name="changed" handler="prefs_file_option_changed" last_modification_time="Fri, 25 Apr 2003 09:42:37 GMT"/>
 			</widget>
 			<packing>
 			  <property name="left_attach">1</property>
